Fix button--outline hover color dark mode (#2462)
* Fix button--outline hover color dark mode

* Feat button--online:hover for dark-mode

--- a/packages/lexical-website-new/src/css/custom.css
+++ b/packages/lexical-website-new/src/css/custom.css
@@ -40,3 +40,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 .footer__links {
   margin-bottom: 3rem;
 }
+
+html[data-theme='dark'] .button--outline:hover {
+  color: white;
+}
